@@ -1,8 +1,11 @@
 package com.sighs.apricityui.init;
 
-import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.matrix.MatrixStack;
 import com.sighs.apricityui.render.*;
 import com.sighs.apricityui.style.*;
+import lombok.Getter;
+import lombok.Setter;
+import com.sighs.apricityui.util.StringUtils;
 
 import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -11,6 +14,7 @@ import java.util.function.Consumer;
 
 public class Element {
     public UUID uuid = UUID.randomUUID();
+    @Getter
     private HashMap<String, String> attributes = new HashMap<>();
     public Document document;
     public String tagName;
@@ -19,12 +23,14 @@ public class Element {
     public boolean isLoaded = false;
     public HashMap<String, String> cssCache = new HashMap<>();
     private int dirtyFlags = 0;
+    @Getter
     public int depth = 0;
     public Element parentElement = null;
     public CopyOnWriteArrayList<Element> children = new CopyOnWriteArrayList<>();
     public boolean isPointerEnabled = true;
     public boolean isVisible = true;
     public String id = null;
+    @Setter
     public String value = null;
     public boolean isHover = false;
     public boolean isActive = false;
@@ -57,14 +63,12 @@ public class Element {
     }
 
     public Style style = null;
+
     public Style getStyle() {
         if (style == null) updateInlineStyle();
         return style;
     }
 
-    public HashMap<String, String> getAttributes() {
-        return attributes;
-    }
     public String getAttribute(String name) {
         if (name.equals("value")) {
             String _value = attributes.getOrDefault(name, "");
@@ -97,6 +101,7 @@ public class Element {
 //        }
         return attributes.getOrDefault(name, "");
     }
+
     public void setAttribute(String name, String value) {
         attributes.put(name, value);
         if (name.equals("style")) {
@@ -110,8 +115,8 @@ public class Element {
         }
         if (name.equals("class")) {
             classNames = new ArrayList<>();
-            if (value != null && !value.isBlank()) {
-                classNames.addAll(List.of(value.trim().split("\\s+")));
+            if (StringUtils.isNotNullOrEmptyEx(value)) {
+                classNames.addAll(Arrays.asList(value.trim().split("\\s+")));
             }
         }
         updateCSS();
@@ -137,10 +142,11 @@ public class Element {
     public boolean hasAttribute(String name) {
         return attributes.containsKey(name);
     }
+
     public Set<String> getClassNames() {
         String classes = getAttribute("class");
-        if (classes == null || classes.isBlank()) return Collections.emptySet();
-        return Set.of(classes.trim().split("\\s+"));
+        if (StringUtils.isNullOrEmptyEx(classes)) return Collections.emptySet();
+        return new HashSet<>(Arrays.asList(classes.trim().split("\\s+")));
     }
 
     protected void updateCSS() {
@@ -189,6 +195,7 @@ public class Element {
         }
         return computedStyle;
     }
+
     public void updateInlineStyle() {
         Style newStyle = new Style();
         newStyle.merge(attributes.getOrDefault("style", ""));
@@ -201,28 +208,34 @@ public class Element {
         isHover = hover;
         updateCSS();
     }
+
     public void setActive(boolean active) {
         if (isActive == active) return;
         isActive = active;
         updateCSS();
     }
+
     public void setFocus(boolean value) {
         isFocus = value;
         updateCSS();
     }
+
     public boolean canFocus() {
         return false;
     }
+
     public static boolean isElementFocusing(Element element) {
         if (element == null || element.document == null) return false;
         Element currentFocus = element.document.getFocusedElement();
         return currentFocus != null && element.uuid.equals(currentFocus.uuid);
     }
+
     public void setScrollLeft(double value) {
         value = Math.min(value, scrollWidth - Size.of(this).width());
         value = Math.max(value, 0);
         scrollLeft = Size.lerp(scrollLeft, value);
     }
+
     public void setScrollTop(double value) {
         double limitHeight = scrollHeight - Size.of(this).height();
         if (value < 0) value *= 0.4;
@@ -231,33 +244,37 @@ public class Element {
         }
         targetScrollTop = value;
     }
+
     public double getScrollTop() {
         if (scrollTop != targetScrollTop) {
             renderElement.position.clear();
             double process = (System.currentTimeMillis() - lastTickTime) / 50d;
             double nextScrollTop = (targetScrollTop - scrollTop) * 0.2 + scrollTop;
-            return  (nextScrollTop - scrollTop) * process + scrollTop;
+            return (nextScrollTop - scrollTop) * process + scrollTop;
         } else return scrollTop;
     }
+
     public boolean canScroll() {
         if (getComputedStyle().overflow.equals("visible")) return false;
         return scrollHeight != Size.of(this).height();
     }
-    public void setValue(String value) {
-        this.value = value;
-    }
 
-    public void drawPhase(PoseStack poseStack, Base.RenderPhase phase) {
+    public void drawPhase(MatrixStack stack, Base.RenderPhase phase) {
         Rect rectRenderer = Rect.of(this);
         switch (phase) {
-            case SHADOW -> rectRenderer.drawShadow(poseStack);
-            case BODY -> {
-                rectRenderer.drawBody(poseStack);
-                FontDrawer.drawFont(poseStack, Text.of(this), rectRenderer.getContentPosition());
+            case SHADOW: {
+                rectRenderer.drawShadow(stack);
             }
-            case BORDER -> {
-                rectRenderer.drawBorder(poseStack);
+            break;
+            case BODY: {
+                rectRenderer.drawBody(stack);
+                FontDrawer.drawFont(stack, Text.of(this), rectRenderer.getContentPosition());
             }
+            break;
+            case BORDER: {
+                rectRenderer.drawBorder(stack);
+            }
+            break;
         }
     }
 
@@ -269,7 +286,8 @@ public class Element {
      * 不会重新触发 {@link #setAttribute(String, String)} 的副作用。因此该钩子用于让子类在不强制触发
      * CSS/layout 的前提下，从 attributes 中同步一次内部状态。
      */
-    protected void onInitFromDom(Element origin) {}
+    protected void onInitFromDom(Element origin) {
+    }
 
     /**
      * 运行一次性的 DOM 初始化逻辑（含公共同步），避免重复执行。
@@ -285,7 +303,7 @@ public class Element {
         if ((id == null || id.isEmpty()) && attrId != null && !attrId.isEmpty()) {
             id = attrId;
         }
-        if (document != null && id != null && !id.isBlank()) {
+        if (document != null && StringUtils.isNotNullOrEmptyEx(id)) {
             document.recordID(this);
         }
 
@@ -297,7 +315,7 @@ public class Element {
         String attrClass = attributes.getOrDefault("class", null);
         if (classNames == null && attrClass != null && !attrClass.isEmpty()) {
             classNames = new ArrayList<>();
-            classNames.addAll(List.of(attrClass.split(" ")));
+            classNames.addAll(Arrays.asList(attrClass.split(" ")));
         }
 
         onInitFromDom(origin);
@@ -347,6 +365,7 @@ public class Element {
     public List<Element> querySelectorAll(String selector) {
         return Selector.querySelectorAll(this, selector);
     }
+
     public Element querySelector(String selector) {
         return Selector.querySelector(this, selector);
     }
@@ -354,6 +373,7 @@ public class Element {
     public void prepend(Element element) {
         document.createRelation(init(element), this, true);
     }
+
     public void append(Element element) {
         document.createRelation(init(element), this, false);
     }
@@ -361,9 +381,15 @@ public class Element {
     public void addDirtyFlags(int mask) {
         this.dirtyFlags |= mask;
     }
-    public boolean hasDirtyFlag(int mask) { return (this.dirtyFlags & mask) != 0; }
-    public void clearDirtyFlags() { this.dirtyFlags = 0; }
-    public int getDepth() { return this.depth; }
+
+    public boolean hasDirtyFlag(int mask) {
+        return (this.dirtyFlags & mask) != 0;
+    }
+
+    public void clearDirtyFlags() {
+        this.dirtyFlags = 0;
+    }
+
     public Element getParentStackContext() {
         Element parent = parentElement;
         while (parent != null) {
@@ -372,17 +398,19 @@ public class Element {
         }
         return document.body;
     }
+
     public boolean isStackContext() {
         Style style = getComputedStyle();
         return !style.position.equals("static") || !style.zIndex.equals("auto");
     }
 
     private long lastTickTime;
+
     public void tick() {
         lastTickTime = System.currentTimeMillis();
         if (scrollTop != targetScrollTop) {
             double l = 0.2;
-//            if (scrollTop < 0 || scrollTop > scrollHeight - Size.of(this).height()) l = 0.3;
+            // if (scrollTop < 0 || scrollTop > scrollHeight - Size.of(this).height()) l = 0.3;
             scrollTop = (targetScrollTop - scrollTop) * l + scrollTop;
             if ((int) scrollTop == (int) targetScrollTop) targetScrollTop = scrollTop;
         }
@@ -400,15 +428,19 @@ public class Element {
 
     // 事件部分
     public ArrayList<Event> EventListener = new ArrayList<>();
+
     public void addEventListener(String type, Consumer<Event> listener) {
         addEventListener(type, listener, false);
     }
+
     public void addEventListener(String type, Consumer<Event> listener, boolean useCapture) {
         EventListener.add(new Event(this, type, listener, useCapture));
     }
+
     public void removeEventListener(String type, Consumer<Event> listener, boolean useCapture) {
         EventListener.removeIf(event -> type.equals(event.type) && listener.equals(event.listener) && useCapture == event.useCapture);
     }
+
     public void triggerEvent(Consumer<Event> handler) {
         EventListener.forEach(handler);
     }
@@ -416,6 +448,7 @@ public class Element {
     public RenderElement getRenderer() {
         return renderElement;
     }
+
     public void resetRenderer() {
         renderElement = new RenderElement(this);
     }
