@@ -1,22 +1,22 @@
 package com.sighs.apricityui.resource.async.style;
 
 import com.sighs.apricityui.init.AbstractAsyncHandler;
-import com.sighs.apricityui.instance.Loader;
 import com.sighs.apricityui.init.Document;
+import com.sighs.apricityui.instance.Loader;
 import com.sighs.apricityui.resource.CSS;
 import com.sighs.apricityui.resource.Font;
+import com.sighs.apricityui.resource.Image;
 import com.sighs.apricityui.resource.async.network.NetworkAsyncHandler;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.experimental.Accessors;
+import com.sighs.apricityui.util.StringUtils;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.regex.Matcher;
@@ -54,7 +54,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
         int order = 0;
 
         String globalCss = Loader.readGlobalCSS();
-        if (globalCss != null && !globalCss.isBlank()) {
+        if (StringUtils.isNotNullOrEmptyEx(globalCss)) {
             ParsedCss parsed = parseCss(globalCss, "global.css");
             handle.putCssEntry(order++, new StyleHandle.CssEntry("global.css", parsed.cssText()));
             enqueueFontTasks(handle, parsed.fontTasks());
@@ -69,7 +69,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
 
         if (inlineStyles != null) {
             for (String inlineCss : inlineStyles) {
-                if (inlineCss == null || inlineCss.isBlank()) continue;
+                if (StringUtils.isNullOrEmptyEx(inlineCss)) continue;
                 ParsedCss parsed = parseCss(inlineCss, contextPath);
                 handle.putCssEntry(order++, new StyleHandle.CssEntry(contextPath, parsed.cssText()));
                 enqueueFontTasks(handle, parsed.fontTasks());
@@ -97,7 +97,8 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
         }
 
         task.handle().markApplying();
-        if (task instanceof CssLoadedTask cssLoadedTask) {
+        if (task instanceof CssLoadedTask) {
+            CssLoadedTask cssLoadedTask = (CssLoadedTask) task;
             task.handle().putCssEntry(cssLoadedTask.order(), new StyleHandle.CssEntry(cssLoadedTask.contextPath(), cssLoadedTask.cssText()));
             enqueueFontTasks(task.handle(), cssLoadedTask.fontTasks());
             rebuildCssCache(document, task.handle());
@@ -106,11 +107,13 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
             return;
         }
 
-        if (task instanceof FontLoadedTask fontLoadedTask) {
+        if (task instanceof FontLoadedTask) {
+            FontLoadedTask fontLoadedTask = (FontLoadedTask) task;
             boolean success = false;
             try (ByteArrayInputStream stream = new ByteArrayInputStream(fontLoadedTask.bytes())) {
                 success = Font.registerFont(fontLoadedTask.fontFamily(), stream);
-            } catch (IOException ignored) {}
+            } catch (IOException ignored) {
+            }
             if (success) {
                 document.reapplyStylesFromCache();
             }
@@ -143,7 +146,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
     }
 
     private void enqueueCssFetch(StyleHandle handle, int order, String resolvedPath) {
-        if (resolvedPath == null || resolvedPath.isBlank()) return;
+        if (StringUtils.isNullOrEmptyEx(resolvedPath)) return;
         long now = System.currentTimeMillis();
         Long failedAt = FAILED_CACHE.get(resolvedPath);
         if (failedAt != null && now - failedAt < FAILED_TTL_MS) return;
@@ -163,7 +166,8 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
     private void enqueueFontTasks(StyleHandle handle, List<FontTask> fontTasks) {
         if (fontTasks == null || fontTasks.isEmpty()) return;
         for (FontTask fontTask : fontTasks) {
-            if (fontTask == null || fontTask.fontFamily().isBlank() || fontTask.path().isBlank()) continue;
+            if (fontTask == null || StringUtils.isNullOrEmptyEx(fontTask.fontFamily()) || StringUtils.isNullOrEmptyEx(fontTask.path()))
+                continue;
             String fontKey = fontTask.fontFamily().trim() + "|" + fontTask.path().trim();
             if (!handle.tryRequestFont(fontKey)) continue;
 
@@ -185,7 +189,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
 
     private String loadCssWithImports(String path, int depth, Set<String> visited) throws IOException {
         if (depth > MAX_IMPORT_DEPTH) return "";
-        if (path == null || path.isBlank()) return "";
+        if (StringUtils.isNullOrEmptyEx(path)) return "";
 
         String normalized = path.trim();
         if (!visited.add(normalized)) return "";
@@ -200,11 +204,12 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
         if (depth < MAX_IMPORT_DEPTH) {
             for (String importPath : imports) {
                 String resolved = Loader.resolve(normalized, importPath);
-                if (resolved.isBlank()) continue;
+                if (StringUtils.isNullOrEmptyEx(resolved)) continue;
                 try {
                     String imported = loadCssWithImports(resolved, depth + 1, visited);
-                    if (!imported.isBlank()) merged.append(imported).append('\n');
-                } catch (IOException ignored) {}
+                    if (StringUtils.isNotNullOrEmptyEx(imported)) merged.append(imported).append('\n');
+                } catch (IOException ignored) {
+                }
             }
         }
         merged.append(cssWithoutImport);
@@ -212,7 +217,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
     }
 
     private ParsedCss parseCss(String css, String contextPath) {
-        if (css == null) return new ParsedCss("", List.of());
+        if (css == null) return new ParsedCss("", Collections.emptyList());
         String cleanCss = COMMENT_PATTERN.matcher(css).replaceAll("");
 
         Matcher matcher = FONT_FACE_PATTERN.matcher(cleanCss);
@@ -229,7 +234,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
     }
 
     private FontTask parseFontTask(String rules, String contextPath) {
-        if (rules == null || rules.isBlank()) return null;
+        if (StringUtils.isNullOrEmptyEx(rules)) return null;
         String[] pairs = rules.split(";");
         String fontFamily = null;
         String src = null;
@@ -246,28 +251,28 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
         Matcher urlMatcher = URL_PATTERN.matcher(src);
         if (!urlMatcher.find()) return null;
         String rawPath = urlMatcher.group(1).replace("\"", "").replace("'", "").trim();
-        if (rawPath.isBlank()) return null;
+        if (StringUtils.isNullOrEmptyEx(rawPath)) return null;
 
         String resolvedPath = Loader.resolve(contextPath, rawPath);
         String cleanFamily = fontFamily.replace("\"", "").replace("'", "").trim();
-        if (cleanFamily.isBlank() || resolvedPath.isBlank()) return null;
+        if (StringUtils.isNullOrEmptyEx(cleanFamily) || StringUtils.isNullOrEmptyEx(resolvedPath)) return null;
         return new FontTask(cleanFamily, resolvedPath);
     }
 
     private List<String> extractImportPaths(String css) {
-        if (css == null || css.isBlank()) return List.of();
+        if (StringUtils.isNullOrEmptyEx(css)) return Collections.emptyList();
         ArrayList<String> imports = new ArrayList<>();
         Matcher matcher = IMPORT_PATTERN.matcher(css);
         while (matcher.find()) {
             String path = matcher.group(1);
-            if (path == null || path.isBlank()) continue;
+            if (StringUtils.isNullOrEmptyEx(path)) continue;
             imports.add(path.trim());
         }
         return imports;
     }
 
     private String stripImports(String css) {
-        if (css == null || css.isBlank()) return "";
+        if (StringUtils.isNullOrEmptyEx(css)) return "";
         return IMPORT_PATTERN.matcher(css).replaceAll("");
     }
 
@@ -311,7 +316,7 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
         }
         try (InputStream stream = Loader.getResourceStream(path)) {
             if (stream == null) throw new IOException("未找到样式资源: " + path);
-            return stream.readAllBytes();
+            return Image.toByteArray(stream);
         }
     }
 
@@ -319,32 +324,59 @@ public class StyleAsyncHandler extends AbstractAsyncHandler<StyleAsyncHandler.Ap
         StyleHandle handle();
     }
 
-    private record CssLoadedTask(
-            StyleHandle handle,
-            int order,
-            String contextPath,
-            String cssText,
-            List<FontTask> fontTasks
-    ) implements ApplyTask {}
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static class CssLoadedTask implements ApplyTask {
+        private StyleHandle handle;
+        private int order;
+        private String contextPath;
+        private String cssText;
+        private List<FontTask> fontTasks;
+    }
 
-    private record FontLoadedTask(
-            StyleHandle handle,
-            String fontFamily,
-            String path,
-            byte[] bytes
-    ) implements ApplyTask {}
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static class FontLoadedTask implements ApplyTask {
+        private StyleHandle handle;
+        private String fontFamily;
+        private String path;
+        private byte[] bytes;
+    }
 
-    private record FailedTask(
-            StyleHandle handle,
-            String path,
-            Exception error
-    ) implements ApplyTask {}
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static class FailedTask implements ApplyTask {
+        private StyleHandle handle;
+        private String path;
+        private Exception error;
+    }
 
-    private record ParsedCss(String cssText, List<FontTask> fontTasks) {}
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static class ParsedCss {
+        private String cssText;
+        private List<FontTask> fontTasks;
+    }
 
-    private record FontTask(String fontFamily, String path) {}
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static class FontTask {
+        private String fontFamily;
+        private String path;
+    }
 
-    private record CacheEntry(byte[] bytes, long expiresAtMs) {}
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static class CacheEntry {
+        private byte[] bytes;
+        private long expiresAtMs;
+    }
 
     private static final class InFlightEntry {
         private final CountDownLatch latch = new CountDownLatch(1);
